# nice-try

./: .gitignore  README.md  main.py  pyproject.toml
src/: constants.py  hashing.py  main.py  plumbing.py  porcelain.py
