[project]
name = "nice-try"
version = "0.1"
description = "The solution to accumolative AI slop"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.26.7",
]

[project.scripts]
ntry = "main:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]